# Rubiks_Cube_Project

./: BFS_Solver.h  CMakeLists.txt  Corner_DB_Maker.h  Corner_Pattern_Database.cpp  Corner_Pattern_Database.h  CubeModel_1D_Array.cpp  CubeModel_1D_Array.h  CubeModel_3D_Array.cpp  CubeModel_3D_Array.h  CubeModel_Bitboard.cpp  CubeModel_Bitboard.h  DFS_Solver.h  Generic_Rubiks_Cube.cpp  Generic_Rubiks_Cube.h  IDAStar_Solver.h  IDDFS_Solver.h  Nibble_Array.h  Pattern_Database.cpp  Pattern_Database.h  main.cpp  math.h
BlackBOX/: Permutation_Indexer.h  math.cpp
Cube Models/: CubeModel_1D_Array.cpp  CubeModel_3D_Array.cpp  CubeModel_3D_Array.h  CubeModel_Bitboard.cpp  Generic_Rubiks_Cube.cpp
Database/Database Constructor/: Nibble_Array.cpp
Pattern Database/: Pattern_Database.h
Pattern Database/Corner Pattern Database/: Corner_DB_Maker.cpp  Corner_DB_Maker.h  Corner_Pattern_Database.h
Solver Algorithms/: BFS_Solver.h  DFS_Solver.h  IDAStar_Solver.h  IDDFS_Solver.h
